@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#1949] Feature: Allow VIP users to FE-edit their events
 - [#2155] Fix: Unit test failure: tx_seminars_eventEditorChild_testcase::testGetEventSuccessfullySavedUrlReturnsUrlStartingWithHttp
 - [#1137] Change: Change =& new to = new and remove the & from before function names
 - [#2156] Add a Dutch manual, thanks to Nico Deblauwe
